--- a/assets/index.html
+++ b/assets/index.html
@@ -29,7 +29,8 @@
          </section>
          <section class="card" id="javascript-section">
            <h2>JavaScript</h2>
-           <ul><li>Enter my JavaScript notes here</li></ul> 
+           <ul><li>A variable is a named container that allows us to store data in our code</li>
+        <li>Control flow is the order in which a computer executes code in a script</li></ul> 
          </section>
     </main>
 
